# testingpublic

./: README.md  changelog.txt  compile_all.sh  fonttool.py  meson.build  meson_options.txt
.github/: .gitignore  build.sh  prepare.py
data/: font.bz2
src/gui/game/: Brush.cpp  Brush.h  GOLTool.cpp  GameController.cpp  GameController.h  GameModel.cpp  GameModel.h  GameView.cpp  GameView.h  GameViewBasic.cpp  GameViewTouchUI.cpp  PropertyTool.cpp  PropertyTool2.cpp  QuickOption.h  QuickOptions.cpp  QuickOptions.h  SignTool.cpp  Tool.cpp  ToolButton.cpp  ToolButton.h  TransformTool.cpp  meson.build
src/gui/game/config_tool/: TRBN.h
src/gui/game/record/: RecordController.cpp  RecordController.h  RecordHelpText.h  RecordMenu.cpp  RecordMenu.h  RecordState.cpp  RecordState.h
src/simulation/: Air.cpp  Editing.cpp  ElementDefs.h  Sign.cpp  SimTool.cpp  Simulation.cpp  Simulation.h  Snapshot.h  Spaceship.cpp  Spaceship.h  meson.build
src/simulation/circuits/: resistance.cpp
src/simulation/circuits/components/: branch.cpp  circuit.cpp
src/simulation/elements/: 009S.cpp  ABWM.cpp  BCTR.cpp  BEE.cpp  BIRD.cpp  BJEL.cpp  BOMB.cpp  BSMH.cpp  CAPR.cpp  CONV.cpp  COTR.cpp  CYTK.cpp  DEBG.cpp  EMP.cpp  ERAY.cpp  EXFN.cpp  FFLD.cpp  FILT.cpp  FIRE.cpp  FIRW.cpp  FISH.cpp  FLSH.cpp  GNSH.cpp  GOO.cpp  HAIR.cpp  HRSE.cpp  HULL.cpp  INDC.cpp  JCB1.cpp  LOGC.cpp  MSSL.cpp  MVSD.cpp  PHOT.cpp  PIPE.cpp  POTO.cpp  PTNM.cpp  QLOG.cpp  RDMD.cpp  RSPK.cpp  RSTR.cpp  (+12 more)
src/simulation/mvsd/: movingsolids.cpp
src/simulation/vehicles/: gunship.cpp  horse.cpp  vehicle.cpp
(+208 files in other folders)
