simulation_files = files(
	'Air.cpp',
	'Element.cpp',
	'ElementClasses.cpp',
	'GOLString.cpp',
	'Gravity.cpp',
	'Particle.cpp',
	'SaveRenderer.cpp',
	'Sign.cpp',
	'SimTool.cpp',
	'SimulationData.cpp',
	'ToolClasses.cpp',
	'Simulation.cpp',
	'SnapshotDelta.cpp',
	'Spaceship.cpp',
	'Stasis.cpp'
)

subdir('transform')
subdir('vehicles')
subdir('stress')
subdir('quantum')
subdir('mvsd')
subdir('circuits')
subdir('magnetics')

subdir('elements')
subdir('simtools')

powder_files += simulation_files
render_files += simulation_files
