powder_files += files(
	'BitmapBrush.cpp',
	'Brush.cpp',
	'DecorationTool.cpp',
	'Favorite.cpp',
	'GameController.cpp',
	'GameModel.cpp',
	'GameView.cpp',
	'GameViewBasic.cpp',
	'GameViewTouchUI.cpp',
	'GOLTool.cpp',
	'Menu.cpp',
	'PropertyTool.cpp',
	'SampleTool.cpp',
	'SignTool.cpp',
	'ToolButton.cpp',
	'Tool.cpp',
)
